# notify

./: .env_template  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  notify.example.yaml  pyproject.toml  setup.cfg  travis_key.enc  uwsgi.ini
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.override.yml
.github/: build-and-push-be-image.yml
.github/workflows/: build-and-push-be-image.yml
base/: auth.py  authentication.py  exceptions.py  serializers.py  tasks.py  telegrambot.py  utils.py  views.py
base/migrations/: 0001_initial.py  0002_add_telegram_provider.py  0003_asapschedule_connection.py  0004_dailyschedule_weeklyschedule.py  0005_auto_20200717_0752.py  0006_auto_20200717_0801.py
base/models/: __init__.py  asap_schedule.py  connection.py  daily_schedule.py  provider.py  weekly_schedule.py
base/services/: __init__.py
base/services/telegram/: service.py
base/templates/telegram/: announce.djt  notification.djt  release.djt
cmd/notify/: main.go  notifier.go
internal/api/: artists.go  artists_test.go  base_test.go  chats.go  chats_test.go  feed.go  feed_test.go  healthz.go  server.go  subscriptions.go  subscriptions_test.go  users.go  users_test.go
internal/api/validators/: users.go
internal/config/: config.go  config_test.go
internal/cron/: cron.go  cron_test.go
internal/db/: artists.go  artists_test.go  bootstrap.go  chats.go  chats_test.go  db.go  feed_test.go  last.go  last_test.go  models.go  notifications.go  notifications_test.go  releases.go  releases_test.go  stores.go  stores_test.go  subscriptions.go  subscriptions_test.go  users_test.go
internal/log/: configure.go  logger.go
internal/notifier/: notifier.go  telegramutils.go  telegramutils_test.go
internal/notifier/steps/: artist.go  artist_test.go  base_test.go  chat.go  chat_test.go  exclude.go  exclude_test.go  fetch.go  fetch_test.go  pipeline.go  schemas.go  subscription.go  subscription_test.go
notify/: settings.py  urls.py
(+1 files in other folders)
