[tool.poetry]
name = "notify"
version = "0.1.0"
description = ""
authors = ["Evgeny Kemerov <eskemerov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.14.0"
psycopg2-binary = "^2.8"
sentry-sdk = {version = "^0.18.0", extras = ["celery"]}
django = "^3.1"
djangorestframework = "^3.11.1"
celery = {version = "^4.4.7", extras = ["redis"]}
uwsgi = "^2.0.19"
python-telegram-bot = "^12.8"
python-dateutil = "^2.8.1"
django-telegrambot = {git = "https://github.com/telebotter/django-telegrambot.git"}
django-redis = "^4.12.1"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
flake8 = "^3.7"
isort = "^5.5"
pylint-django = "^2.3"
black = "^20.8b1"
ipython = "^7.17.0"
mypy = "^0.800"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
